kubernetes/examples/03_secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysecretpod
spec:
  containers:
  - name: mysecretpod
    image: alpine
    command:
    - cat
    tty: true
    volumeMounts:
    - name: mysecret
      mountPath: "/etc/mysecret"
      readOnly: true
  volumes:
  - name: mysecret
    secret:
      secretName: mypassword
