kubernetes/examples/configmap.yml
#kubectl create configmap myindex --from-file=index.html
apiVersion: v1
kind: Pod
metadata:
  name: mycfgmappod
  labels:
        app: mycfgmappod
spec:
  containers:
  - name: tomcat
    image: "httpd"
    ports:
      - containerPort: 80
    volumeMounts:
    - name: indexdata
      mountPath: /usr/local/apache2/htdocs
  volumes:
  - name: indexdata
    configMap:
      name: myindex
