kubernetes/examples/secret1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysecretpod1
spec:
  containers:
  - name: mysecretpod1
    image: alpine
    command:
    - cat
    tty: true
    volumeMounts:
    - name: mysecret1
      mountPath: "/etc/mysecret1"
      readOnly: true
  volumes:
  - name: mysecret1
    secret:
      secretName: mysecret1svc
#kubectl exec -it mypod cat /etc/mysecret/myname
