kubernetes/examples/06_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  labels:
    app: mysite
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
        volumeMounts:
        - name: indexdata
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: indexdata
        configMap:
          name: demo-index
---
apiVersion: v1
kind: Service
metadata: 
  name: mysite
spec: 
  type: NodePort
  selector: 
    app: mysite
  ports: 
  - name: http
    nodePort: 30023
    port: 80
    protocol: TCP
#kubectl scale deployments mysite --replicas=4
#kubectl set image deployments mysite tomcat=nginx --record
#kubectl rollout status deployments mysite
#kubectl rollout history deployment mysite
#kubectl get replicasets (rs)
#kubectl rollout undo deployment mysite
#kubectl rollout history deployment mysite --revision=3
#kubectl autoscale deployments mysite  --min=5 --max=15 --cpu-percent=8
