kubernetes/examples/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysite
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: tomcat
        image: "httpd"
        ports:
          - containerPort: 80
        volumeMounts:
        - name: indexdata
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: indexdata
        configMap:
          name: demo-index
---
apiVersion: v1
kind: Service
metadata: 
  name: mysite
spec: 
  type: NodePort
  selector: 
    app: mysite
  ports: 
  - name: http
    nodePort: 30023
    port: 80
    protocol: TCP
