kubernetes/examples/pod.yml
apiVersion: v1
kind: Service
metadata: 
  name: mysitepod
spec: 
  type: NodePort
  selector: 
    app: mysitepod
  ports: 
  - name: http
    nodePort: 30024
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: mysitepod
  labels:
        app: mysitepod
spec:
  containers:
  - name: tomcat
    image: "httpd"
    ports:
      - containerPort: 80
  #   volumeMounts:
  #   - name: indexdata
  #     mountPath: /usr/local/apache2/htdocs
  # volumes:
  # - name: indexdata
  #   configMap:
  #     name: demo-index
