kubernetes/examples/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: mysitepod
spec: 
  type: NodePort
  selector: 
    app: mysitepod
  ports: 
  - name: http
    nodePort: 30024
    port: 80
    protocol: TCP
