kubernetes/examples/statefulset.yml
apiVersion: v1
kind: Service
metadata: 
  name: statefulsetsvc
spec: 
  type: NodePort
  selector: 
    app: statefulsetpod
  ports: 
  - name: http
    nodePort: 30028
    port: 80
    protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
spec:
  selector:
    matchLabels:
      app: statefulsetpod # has to match .spec.template.metadata.labels
  serviceName: "statefulsetsvc"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: statefulsetpod # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      #storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 10Mi
