kubernetes/examples/02a_ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysitepod
  labels:
        app: mysitepod
spec:
  containers:
  - name: tomcat
    image: "httpd"
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mysitesvc
  namespace: suv
spec:
  selector:
    app: mysitepod
  ports:
  - name: http
    port: 80
    protocol: TCP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysiteingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mysite.192.168.99.100.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mysitesvc
              servicePort: 80
